minor fix in spacing of footer icons in tablets

--- a/public_html/scss/_styles.scss
+++ b/public_html/scss/_styles.scss
@@ -828,7 +828,7 @@ footer {
         .contact {
             li {
                 p {
-                    min-width: 65%;
+                    min-width: 82%;
 
                     i{
                         float: left;
